Add session management UI with tests
- GET /api/admin/sessions - List sessions with metadata
- GET /api/admin/sessions/:key/history - Get message history
- SessionsPanel component with filtering and history preview
- 7 unit tests for session API endpoints
- Workspace templates for new bot instances
- Startup script with R2 backup/restore

--- a/moltbot.json.template
+++ b/moltbot.json.template
@@ -6,6 +6,13 @@
   },
   "gateway": {
     "port": 18789,
-    "mode": "local"
+    "mode": "local",
+    "http": {
+      "endpoints": {
+        "chatCompletions": {
+          "enabled": true
+        }
+      }
+    }
   }
 }
